--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -11,7 +11,7 @@
   justify-content: center;
   border-radius: 20px;
   color: darkslategray;
-  z-index: 10;
+  z-index: 2;
 }
 
 .form-inputs
@@ -35,6 +35,7 @@
   align-items: center;
   margin: 0px;
   background-size: cover;
+  z-index: 5;
 }
 
 .form-button
