--- a/frontend/src/components/SignupFormModal/Signup.css
+++ b/frontend/src/components/SignupFormModal/Signup.css
@@ -5,13 +5,13 @@
   flex-direction: column;
   align-items: center;
   border: 2px solid rgba(255, 255, 255, 0.4);
-  background-color:  rgba(255, 255, 255, 0.8);
+  background-color:  rgba(255, 255, 255, .8);
   height: 500px;
   width: 350px;
   justify-content: center;
   border-radius: 20px;
   color: darkslategray;
-  z-index: 10;
+  z-index: 5;
 }
 
 .signUp__form-inputs
@@ -34,7 +34,7 @@
   justify-content: center;
   align-items: center;
   margin: 0px;
-  background-size: cover;
+  z-index: 5;
 }
 
 .signUp__form-button
